fix only on mobile

--- a/site/src/components/pages/ZkSharding/Cherries/Cherries.module.scss
+++ b/site/src/components/pages/ZkSharding/Cherries/Cherries.module.scss
@@ -139,7 +139,9 @@
 }
 
 .headingDescription {
-  width: auto;
+  @include mobile {
+    width: auto;
+  }
 }
 
 .rightHeader {
