--- a/site/src/components/pages/ZkSharding/More/More.module.scss
+++ b/site/src/components/pages/ZkSharding/More/More.module.scss
@@ -142,7 +142,9 @@
 }
 
 .description {
-  width: auto;
+  @include mobile {
+    width: auto;
+  }
 }
 
 .list {
